2nd training/Community/Community/Community1/force-app/main/default/objects/Package__c/fields/Crate__c.field-meta.xml
<CustomField>
    <fullName>Crate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Crate__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>HHGCrate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Crate__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>