2nd training/Community/Community/Community1/force-app/main/default/objects/Package__c/fields/Storage_in__c.field-meta.xml
<CustomField>
    <fullName>Storage_in__c</fullName>
    <label>Storage In</label>
    <required>true</required>
    <type>Date</type>
</CustomField>